--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,5 +48,5 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Build
-        run: swift build
+      - name: Test
+        run: swift test
